--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "ts-node src/index.ts",
     "start-xml": "ts-node -P tsconfig.json test.ts",
     "build": "tsc -p tsconfig.json",
-    "format": "prettier --write src/**/*.ts"
+    "format": "prettier --write 'src/**/*.ts'"
   },
   "devDependencies": {
     "@types/node": "^14.14.13",
